# SimpleContext-Bot

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
simplecontext_bot/: __init__.py  bot.py  cli.py  config.py  installer.py  llm.py  setup_wizard.py
